MN-554 - more float rounding svn merge -r44537:44538 https://source.sakaiproject.org/contrib/muse/mneme/trunk
git-svn-id: https://source.sakaiproject.org/contrib/muse/mneme/branches/1.0@44539 fdecad78-55fc-0310-b1b2-d7d25cf747c9